@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-01-07  Piotr Ożarowski
+	* Copy title if original title is not available in FDb.pl movie plugin
+
 2007-01-06  Piotr Ożarowski
 	* Clear movie details if no movie is selected
 	* Speed up Griffith's startup a little bit
